<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="Авторизация"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_border_input"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/login"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lato"
            android:textSize="12sp"
            android:textColor="@color/text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editLogin"
            android:hint="@string/hint_login"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textColorHint="@color/text50"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_border_input"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/password"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lato"
            android:textSize="12sp"
            android:textColor="@color/text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editPassword"
            android:hint="@string/hint_password"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/text50"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/rpShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            app:layout_constraintTop_toTopOf="@id/editPassword"
            app:layout_constraintEnd_toEndOf="@id/editPassword"
            app:layout_constraintBottom_toBottomOf="@id/editPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:mrl_rippleColor="@color/blue"
            app:mrl_rippleDelayClick="true"
            app:mrl_rippleDuration="100"
            app:mrl_rippleOverlay="true">

            <ImageButton
                android:id="@+id/imgButton"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@drawable/show_input" />
        </com.balysv.materialripple.MaterialRippleLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/log_in_btn"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textAllCaps="false"
        android:fontFamily="@font/lato_bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        android:id="@+id/progress_view"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:cpv_animAutostart="true"
        app:cpv_indeterminate="true"
        app:cpv_color="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:translationY="55dp"
        android:layout_alignBottom="@id/password"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
